--- a/index.html
+++ b/index.html
@@ -12,7 +12,16 @@
 
 		</ul>
 	</div>
-	<div id="show-panel"></div>
+	<div id="show-p">
+		<img src="" id="bookImg" alt="">
+		<div id="show-panel">
+		</div>
+		<ul id="likes">
+
+		</ul>
+		<button id="likebtn">like</button>
+	    </div>
+	
 	<script type="text/javascript" src="./js/index.js"></script>
 </body>
 </html>
